# crates-info

./: .gitignore  Cargo.toml  Cargo.toml.bak  PLAN.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: main.rs
