[package]
name = "crates-info"
version = "0.1.3"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "A fast CLI tool to get detailed information about Rust crates from crates.io"
homepage = "https://github.com/cumulus13/crates-info"
repository = "https://github.com/cumulus13/crates-info"
license = "MIT"
keywords = ["crates", "cli", "crates-io", "cargo", "info"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cratesinfo"
path = "src/main.rs"

[dependencies]
# rustls-tls = pure-Rust TLS, no OpenSSL/native-tls needed — works on Windows/macOS/Linux out of the box
reqwest = { version = "=0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "=4.4.18", features = ["derive", "color"] }
colored = "2"
textwrap = "0.16"
terminal_size = "0.3"
url = "=2.4.1"
idna = "=0.4.0"
